# TATextEditor

./: .gitignore  CMakeLists.txt  DFA.cpp  DFA.h  DesignByContract.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  ProjectPresentatie.pptx  RE.cpp  RE.h  Sentence.cpp  Sentence.h  SpecialCharacter.cpp  SpecialCharacter.h  SyntaxChecker.cpp  SyntaxChecker.h  Text.cpp  Text.h  Word.cpp  Word.h  main.cpp  mainTests.cpp
Files/: GlobalWarming-vs-ClimateChange-NASA.txt  Sources.txt  Tokenization1.txt  buffer.txt  chaotic.json  demo.json  stemming.txt
SavedAutomata/: Abbreviations.txt  AbbreviationsDFA.json  AbbreviationsENFA.json  README_(wat is deze folder).txt
TestFiles/: GlobalWarming-vs-ClimateChange-NASA.txt  TokenizationHappyDay.txt  TokenizationRandgeval1.txt  TokenizationRandgeval2.txt  TokenizationSpecialChar.txt  buffer.txt  demo.json  endTagAttribute.html  invalidTag.html  justAList.json  oddBackSlash.json  onlyHalfABody.html  result.html  tagCorrect.html  weirdValue.json  yanfei.txt
